# qartez-mcp

./: .gitattributes  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  install.ps1  install.sh  osv-scanner.toml
.cargo/: audit.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  cla.yml  codeql.yml  deny.yml  fuzz.yml  release.yml  scorecard.yml
docs/: agent-guide.md  architecture.md  tools.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_boundary_config.rs  parse_security_config.rs
scripts/: ci-retry.sh  opencode-plugin.ts  qartez-session-start.sh
scripts/skill/references/: host-matrix.md
src/: cli.rs  cli_runner.rs  config.rs  embeddings.rs  guard.rs  lib.rs  main.rs  str_utils.rs  test_paths.rs  toolchain.rs  watch.rs
src/benchmark/: grounding.rs  judge.rs  mod.rs  report.rs  scenarios.rs  set_compare.rs  sim_runner.rs  targets.rs
src/benchmark/profiles/: java.rs  mod.rs
src/git/: cochange.rs  knowledge.rs
src/graph/: boundaries.rs  leiden.rs  pagerank.rs  security.rs  wiki.rs
src/index/: mod.rs  parser.rs  symbols.rs  walker.rs
src/index/languages/: bash.rs  c_lang.rs  caddyfile.rs  common.rs  cpp.rs  csharp.rs  css.rs  dart.rs  (+30 more)
src/server/: helpers.rs  mod.rs  overview.rs  params.rs  prompt_tests.rs  prompts.rs  quality_tests.rs  tiers.rs  treesitter.rs
src/storage/: mod.rs  models.rs  read.rs  schema.rs  write.rs
tests/: business_logic.rs  cli_integration.rs  fp_regression_clones_smells.rs  fp_regression_security_refs.rs  fp_regression_structure_tools.rs  test-install.sh  tools.rs
(+32 files in other folders)
